[Added] Cava integration

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -419,6 +419,15 @@ window#waybar.hidden {
     color: #ffffff;
 }
 
+#custom-cava {
+    color: #8FBC8F;
+        border-left: 0px;
+        border-right: 0px;
+        padding-bottom: 6px;
+        font-family: "bargraph";
+        font-size: 22px;
+    }
+
 #idle_inhibitor {
     border-radius: 10px;
     margin-right: 10px;
