--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -427,6 +427,7 @@ window#waybar.hidden {
     padding-left: 16px;
     padding-right: 16px;
     background-color: #383c4a;
+    font-family: "bargraph";
     }
 
 #idle_inhibitor {
