--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -103,8 +103,8 @@ window#waybar.hidden {
 }
 
 #mode {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -112,8 +112,8 @@ window#waybar.hidden {
 }
 
 #clock {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -123,8 +123,8 @@ window#waybar.hidden {
 #wireplumber,
 #pulseaudio {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -142,8 +142,8 @@ window#waybar.hidden {
     animation-iteration-count: infinite;
     animation-direction: alternate;
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -174,8 +174,8 @@ window#waybar.hidden {
 #cpu,
 #temperature {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -188,8 +188,8 @@ window#waybar.hidden {
 
 #backlight {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -198,8 +198,8 @@ window#waybar.hidden {
 
 #battery {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -228,8 +228,8 @@ window#waybar.hidden {
 
 #scratchpad {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -237,8 +237,8 @@ window#waybar.hidden {
 }
 
 #tray {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     margin-right: 2px;
     margin-left: 2px;
     border-radius: 10px;
@@ -255,6 +255,7 @@ window#waybar.hidden {
 }
 
 #control,
+#activity,
 #privgroup,
 #system,
 #screenrecord,
@@ -296,15 +297,15 @@ window#waybar.hidden {
 {
     border-radius: 10px;
     margin-right: 5px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
 
 #custom-launcher {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     margin-left: 15px;
     margin-right: 15px;
     border-radius: 10px;
@@ -312,8 +313,8 @@ window#waybar.hidden {
 }
 #custom-vm {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -332,8 +333,8 @@ window#waybar.hidden {
 
 #custom-grimshot {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -342,8 +343,8 @@ window#waybar.hidden {
 
 #custom-wfrecord {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -373,8 +374,8 @@ window#waybar.hidden {
 
 #custom-mem {
     margin-right: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     border-radius: 10px;
     transition: none;
     color: #ffffff;
@@ -384,8 +385,8 @@ window#waybar.hidden {
 #custom-notification {
     border-radius: 10px;
     margin-right: 5px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
@@ -395,8 +396,8 @@ window#waybar.hidden {
     margin-right: 10px;
     font-size: 12px;
     border-radius: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
@@ -404,8 +405,8 @@ window#waybar.hidden {
 #custom-weather {
     border-radius: 10px;
     margin-right: 5px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
@@ -413,8 +414,8 @@ window#waybar.hidden {
 #power-profiles-daemon {
     border-radius: 10px;
     margin-right: 5px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
@@ -424,8 +425,8 @@ window#waybar.hidden {
     border-radius: 10px;
     border-left: 0px;
     border-right: 0px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     font-family: "bargraph";
     }
@@ -433,8 +434,8 @@ window#waybar.hidden {
 #idle_inhibitor {
     border-radius: 10px;
     margin-right: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: #383c4a;
     color: #ffffff;
 }
