--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -85,7 +85,7 @@ window#waybar.hidden {
 }
 
 #language {
-    padding-left: 16px;
+    padding-left: 8px;
     padding-right: 8px;
     border-radius: 10px 0px 0px 10px;
     transition: none;
@@ -102,27 +102,32 @@ window#waybar.hidden {
     background: #383c4a;
 }
 
-#mode {
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
-#clock {
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
+#mode,
+#clock,
 #wireplumber,
-#pulseaudio {
-    margin-right: 8px;
+#pulseaudio,
+#custom-keyboard-layout,
+#keyboard-state,
+#network,
+#disk,
+#cpu,
+#temperature,
+#backlight,
+#battery,
+#scratchpad,
+#tray,
+#privacy,
+#privacy-item,
+#custom-vm,
+#custom-containers,
+#custom-grimshot,
+#custom-wfrecord,
+#custom-mem,
+#custom-notification,
+#custom-power,
+#custom-weather,
+#power-profiles-daemon,
+#idle_inhibitor {
     padding-left: 12px;
     padding-right: 12px;
     border-radius: 10px;
@@ -167,43 +172,8 @@ window#waybar.hidden {
     padding-right: 5px;
 }
 
-#custom-keyboard-layout,
-#keyboard-state,
-#network,
-#disk,
-#cpu,
-#temperature {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #a5a6ac;
-}
-
-#temperature.critical {
+temperature.critical {
     background-color: #eb4d4b;
-}
-
-#backlight {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
-#battery {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
 }
 
 #battery.charging {
@@ -226,27 +196,6 @@ window#waybar.hidden {
     animation-direction: alternate;
 }
 
-#scratchpad {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
-#tray {
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 2px;
-    margin-left: 2px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
 @keyframes blink {
     to {
         background-color: #ffffff;
@@ -265,18 +214,6 @@ window#waybar.hidden {
     font-size: 12px;
     padding-left: 0px;
     padding-right: 0px;
-}
-
-
-#privacy,
-#privacy-item {
-    margin-right: 8px;
-    border-radius: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
 }
 
 #privacy-item.screenshare {
@@ -306,49 +243,9 @@ window#waybar.hidden {
 #custom-launcher {
     padding-left: 12px;
     padding-right: 12px;
-    margin-left: 15px;
     margin-right: 15px;
     border-radius: 10px;
     background: #383c4a;
-}
-#custom-vm {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #8a95bd;
-    }
-
-#custom-containers {
-    margin-right: 8px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #8a95bd;
-}
-
-#custom-grimshot {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
-#custom-wfrecord {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #a5a6ac;
 }
 
 #custom-mediaplayer {
@@ -372,52 +269,8 @@ window#waybar.hidden {
     background-image: linear-gradient(62deg, #ffc0dd 0%, #ff77ab 100%);
 }
 
-#custom-mem {
-    margin-right: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 10px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
-}
-
-#custom-notification {
-    border-radius: 10px;
-    margin-right: 5px;
-    padding-left: 12px;
-    padding-right: 12px;
-    background-color: #383c4a;
-    color: #ffffff;
-}
-
-#custom-power {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 12px;
-    border-radius: 10px;
-    padding-left: 12px;
-    padding-right: 12px;
-    background-color: #383c4a;
-    color: #ffffff;
-}
-
-#custom-weather {
-    border-radius: 10px;
-    margin-right: 5px;
-    padding-left: 12px;
-    padding-right: 12px;
-    background-color: #383c4a;
-    color: #ffffff;
-}
-
-#power-profiles-daemon {
-    border-radius: 10px;
-    margin-right: 5px;
-    padding-left: 12px;
-    padding-right: 12px;
-    background-color: #383c4a;
-    color: #ffffff;
+#custom-mediaplayer.custom-smplayer {
+    background-image: linear-gradient(62deg, #ffb3b3 0%, #3cd616 100%);
 }
 
 #custom-cava {
@@ -430,12 +283,3 @@ window#waybar.hidden {
     background-color: #383c4a;
     font-family: "bargraph";
     }
-
-#idle_inhibitor {
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 12px;
-    padding-right: 12px;
-    background-color: #383c4a;
-    color: #ffffff;
-}
