[Changed] Padding on groups from 0 to 5

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -49,8 +49,7 @@ window#waybar.hidden {
     margin-left: 3px;
     margin-right: 3px;
     font-size: 12px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding: 5px;
 }
 
 #custom-launcher,
