--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -256,8 +256,7 @@ temperature.critical {
     border-radius: 10px;
     border-left: 0px;
     border-right: 0px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding: 5px;
     background-color: #383c4a;
     font-family: "bargraph";
     }
