[Changed] Reverted background change

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -15,7 +15,7 @@
 }
 
 #waybar.top {
-    background: none;
+    background: transparent;
     transition-property: background-color;
     transition-duration: .5s;
     font-family: "Hack Nerd Font Mono Regular", "MesloLGS Nerd Font", "Arial", "Helvetica", "sans-serif";
