--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -184,7 +184,7 @@ temperature.critical {
 #battery.warning:not(.charging) {
     background-color: #ffbe61;
     color: black;
-}padding: 5px;
+}
 
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
