--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -89,6 +89,7 @@
 #custom-grimshot,
 #custom-keyboard-layout,
 #custom-launcher,
+#custom-mediaplayer,
 #custom-mem,
 #custom-weather,
 #custom-wfrecord,
@@ -237,8 +238,6 @@ temperature.critical {
     background-color: #d0bfff;
     background-image: linear-gradient(62deg, #c4b4ff 0%, #b15eff 100%);
     color: black;
-    border-radius: 5px;
-    margin-right: 5px;
 }
 
     #custom-mediaplayer.custom-spotify {
