--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -48,10 +48,12 @@
 #privgroup,
 #screenrecord,
 #system {
-    margin-left: 3px;
-    margin-right: 3px;
     font-size: 10px;
-    padding: 5px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 5px;
+    transition: none;
 }
 
 #backlight,
