--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    border-radius: 0px;
+    border-radius: 10px;
     font-family: "Hack Nerd Font Mono Regular", "MesloLGS Nerd Font", "Arial", "Helvetica", "sans-serif";
     font-size: 8px;
     min-height: 0;
@@ -49,6 +49,14 @@
     font-size: 8px;
     transition: none;
     margin: 0px;
+    border-radius: 10px;
+}
+
+#activity,
+#control {
+    padding-left: 15px;
+    padding-right: 15px;
+    background: #383c4a;
 }
 
 #backlight,
@@ -93,11 +101,13 @@
         border-radius: 10px;
         color: #ffffff;
         transition: none;
-        padding: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
 }
 
 #custom-launcher {
-        padding-right: 5px;
+        padding-right: 15px;
+        padding-left: 10px;
 }
 
 #workspaces {
